dataset1235/2025-2/1153765216/users/3635356750/executions/2814675586_2403290319.log
== SUBMISSION (2025-08-26 18:12:26)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(f"custo_total:.2f")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
custo_total:.2f
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
custo_total:.2f
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
custo_total:.2f
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
custo_total:.2f
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
custo_total:.2f
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
custo_total:.2f
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:12:55)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(f"custo_total:")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
custo_total:
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
custo_total:
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
custo_total:
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
custo_total:
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
custo_total:
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
custo_total:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:14:53)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = float(input(preco + quantidade ) 
print(f"custo_total:.")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 4
    custo_total = float(input(preco + quantidade ) 
                       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 4
    custo_total = float(input(preco + quantidade ) 
                       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 4
    custo_total = float(input(preco + quantidade ) 
                       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 4
    custo_total = float(input(preco + quantidade ) 
                       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 4
    custo_total = float(input(preco + quantidade ) 
                       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 4
    custo_total = float(input(preco + quantidade ) 
                       ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:18:07)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco * quantidade 
print(f"custo_total:.")
print(preco*quantidade)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:13:15)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(f"custo_total:.")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
custo_total:.
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
custo_total:.
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
custo_total:.
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
custo_total:.
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
custo_total:.
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
custo_total:.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
